--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 	  <version>2.13.1</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/com.servlets/cos -->
+	<dependency>
+      <groupId>com.servlets</groupId>
+      <artifactId>cos</artifactId>
+      <version>05Nov2002</version>
+	</dependency>
+	
     <dependency>
       <groupId>org.apache.taglibs</groupId>
       <artifactId>taglibs-standard-spec</artifactId>
